nixrs-derive-tests/tests/ui/deserialize_from_str_error_not_display.stderr
error[E0277]: `()` doesn't implement `std::fmt::Display`
 --> tests/ui/deserialize_from_str_error_not_display.rs
  |
 6 | #[nix(from_str)]
   |       ^^^^^^^^ the trait `std::fmt::Display` is not implemented for `()`
   |
note: required by a bound in `invalid_data`
  --> $WORKSPACE/nixrs/src/daemon/de/mod.rs
   |
   |     fn invalid_data<T: fmt::Display>(msg: T) -> Self {
   |                        ^^^^^^^^^^^^ required by this bound in `Error::invalid_data`
